# Application

./: .gitattributes  CMakeLists.txt  Kconfig  README.md  platform-env.sh
cmake/: extensions.cmake  kconfig.cmake  toolchain.cmake
cmake/app/: app.cmake
components/: CMakeLists.txt  Kconfig
components/comm/: CMakeLists.txt  Kconfig  comm.c
components/protocol/: CMakeLists.txt  Kconfig  protocol.cpp
include/: comm.h
include/components/: comm.h  protocol.h
include/subsys/: cJSON.h
product/examples/: CMakeLists.txt
product/examples/hello_world/src/: main.c
product/examples/network/udp/src/: main.c
product/examples/src/: main.c
product/examples/video/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/cjson/: CMakeLists.txt  Kconfig  cJSON.c
